objects/MPM_Project_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Resources</relationshipLabel>
        <relationshipName>MPM_Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Displays either the user or contact email based on the record type.</description>
        <formula>IF(RecordType.DeveloperName = &quot;Contact&quot;, 
 Resource__r.MPM4_BASE__Contact__r.Email,
 Resource__r.MPM4_BASE__User__r.Email 
)</formula>
        <inlineHelpText>Displays either the user or contact email based on the record type.</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Resource_Id__c</fullName>
        <description>Could be from either the Project resource object, or the Project contact object.</description>
        <externalId>true</externalId>
        <label>Old_Resource_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;Contact&quot;, 
Resource__r.MPM4_BASE__Contact__r.Phone, 
Resource__r.MPM4_BASE__User__r.Phone 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>MPM_Project_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <errorMessage>MPM+ Project Resource: The selected resource does not match the record type, e.g. when the record type is Contact, the resource must lookup to a Contact as well.</errorMessage>
            <filterItems>
                <field>MPM4_BASE__Milestone1_Resource__c.MPM4_BASE__Contact__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>User</value>
            </filterItems>
            <filterItems>
                <field>MPM4_BASE__Milestone1_Resource__c.MPM4_BASE__User__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contact</value>
            </filterItems>
            <infoMessage>Displayed resources has been limited corresponding to the record type (User/Contact).</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>MPM_Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the resource needs to be sent a survey when clicking the Send Survey button check this off.  Currently only available for Media Training and Consulting</inlineHelpText>
        <label>Send Survey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Project Manager</fullName>
                </value>
                <value>
                    <fullName>Secondary Project Manager</fullName>
                </value>
                <value>
                    <fullName>Field Engineer</fullName>
                </value>
                <value>
                    <fullName>Enterprise Solutions Manager</fullName>
                </value>
                <value>
                    <fullName>3PV System Engineer</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Customer Contact</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPM_Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MPM+ Project Resource</label>
    <nameField>
        <displayFormat>MPR-{000000}</displayFormat>
        <label>MPM+ Project Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPM+ Project Resources</pluralLabel>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>User</fullName>
        <active>true</active>
        <label>User</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>